update all changes

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- slider_area_start -->
     <div class="slider_area">
-        <div class="single_slider  d-flex align-items-center slider_bg_1 overlay2">
+        <div class="single_slider  d-flex align-items-center slider_bg_1">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-9">
@@ -128,7 +128,7 @@
                             <span>Get Started Today.</span>
                             <h3>Help fight illiteracy together</h3>
                             <p>Let us work together for a better future <br>
-                                and help those suffering.</p>
+                                and help those who lack means.</p>
                             <a href="About.html" class="boxed-btn3">Learn More
                             </a>
                         </div>
@@ -158,8 +158,8 @@
                             </div>
                         </div>
                         <div class="help_content">
-                            <h4>Collecting Fund</h4>
-                            <p>Donate to the people of South Sudan so we can provide meals to families in need.</p>
+                            <!-- <h4>Collecting Fund</h4>
+                            <p>Donate to the people of South Sudan so we can provide meals to families in need.</p> -->
                             <a href="Cause.html" class="read_more">Read More</a>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                     <div class="single_reson">
                         <div class="thum">
                             <div class="thum_1">
-                                <img src="img/help/help_2.jpg" alt="">
+                                <!-- <img src="img/help/help_2.jpg" alt=""> -->
                             </div>
                         </div>
                         <div class="help_content">
@@ -182,7 +182,7 @@
                     <div class="single_reson">
                         <div class="thum">
                             <div class="thum_1">
-                                <img src="img/help/help_3.jpg" alt="">
+                                <!-- <img src="img/help/help_3.jpg" alt=""> -->
                             </div>
                         </div>
                         <div class="help_content">
@@ -212,7 +212,7 @@
                     <div class="causes_active owl-carousel">
                         <div class="single_cause">
                             <div class="thumb">
-                                <img src="img/causes/cause_food.jpg" alt="">
+                                <!-- <img src="img/causes/cause_food.jpg" alt=""> -->
                             </div>
                             <div class="causes_content">
                                 <div class="custom_progress_bar">
@@ -228,14 +228,14 @@
                                     <span>Raised: $00.00 </span>
                                     <span>Goal: $250.00 </span>
                                 </div>
-                                <h4>Help us to Send Food</h4>
-                                <p>Hunger Hurts and makes the situation worse. Your donation will help them face this natural disaster.</p>
+                                <!-- <h4>Help us to Send Food</h4>
+                                <p>Hunger Hurts and makes the situation worse. Your donation will help them face this natural disaster.</p> -->
                                 <a class="read_more" href="cause_details.html">Read More</a>
                             </div>
                         </div>
                         <div class="single_cause">
                             <div class="thumb">
-                                <img src="img/causes/cause_clothing_item.jpg" alt="">
+                                <!-- <img src="img/causes/cause_clothing_item.jpg" alt=""> -->
                             </div>
                             <div class="causes_content">
                                 <div class="custom_progress_bar">
@@ -251,14 +251,14 @@
                                     <span>Raised: $00.00 </span>
                                     <span>Goal: $250.00 </span>
                                 </div>
-                                <h4>Clothes For Everyone</h4>
-                                <p>The flood left them empty-handed. Help us donate clothes, bedding, and supplies.</p>
+                                <!-- <h4>Clothes For Everyone</h4>
+                                <p>The flood left them empty-handed. Help us donate clothes, bedding, and supplies.</p> -->
                                 <a class="read_more" href="cause_details.html">Read More</a>
                             </div>
                         </div>
                         <div class="single_cause">
                             <div class="thumb">
-                                <img src="img/causes/cause_plastic_sheet.jpg" alt="">
+                                <!-- <img src="img/causes/cause_plastic_sheet.jpg" alt=""> -->
                             </div>
                             <div class="causes_content">
                                 <div class="custom_progress_bar">
@@ -274,14 +274,14 @@
                                     <span>Raised: $00.00 </span>
                                     <span>Goal: $250.00 </span>
                                 </div>
-                                <h4>Donate Shovel Equipment</h4>
-                                <p>Those displaced are in need of tools to help set up camp.They used their barehand to dig the ground. Any type of shovel equipment you donate will be helpful.</p>
+                                <!-- <h4>Donate Shovel Equipment</h4>
+                                <p>Those displaced are in need of tools to help set up camp.They used their barehand to dig the ground. Any type of shovel equipment you donate will be helpful.</p> -->
                                 <a class="read_more" href="cause_details.html">Read More</a>
                             </div>
                         </div>
                         <div class="single_cause">
                             <div class="thumb">
-                                <img src="img/causes/1.png" alt="">
+                                <!-- <img src="img/causes/1.png" alt=""> -->
                             </div>
                             <div class="causes_content">
                                 <div class="custom_progress_bar">
@@ -297,8 +297,8 @@
                                     <span>Raised: $00.00 </span>
                                     <span>Goal: $250.00 </span>
                                 </div>
-                                <h4>Help us to Send non-food items</h4>
-                                <p>These people need your donation of non-food items such as cooking utensils.</p>
+                                <!-- <h4>Help us to Send non-food items</h4> -->
+                                <!-- <p>These people need your donation of non-food items such as cooking utensils.</p> -->
                                 <a class="read_more" href="cause_details.html">Read More</a>
                             </div>
                         </div>
@@ -438,7 +438,7 @@
                                 </a>
                             </div>
                              
-                            <p class="address_text">Prepare and give hope to vulnerable people <br> help us face by global challenge
+                            <p class="address_text">Prepare and give hope to vulnerable people <br> help us to reduce illiteracy in South Sudan
                             </p>
                             <div class="socail_links">
                                 <ul>
@@ -487,10 +487,10 @@
                                 Contacts
                             </h3>
                             <div class="contacts">
-                                <p>+1 (989) 501-0583 <br>
-                                    rieekhial@gmail.com <br>
-                                    2209 Pierce Road,
-                                    Saginaw michigan, 48604
+                                <p>+1 (989) 493-1583 <br>
+                                    rnnyoach@outlook.com <br>
+                                    1017 e ashman st,
+                                    Midland michigan, 48642
                                 </p>
                             </div>
                         </div>
@@ -504,7 +504,7 @@
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="img/news/news_grassroors_img.jpg" alt="">
+                                            <!-- <img src="img/news/news_grassroors_img.jpg" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="info">
@@ -512,13 +512,13 @@
                                             <h4>School for African 
                                                 Childrens</h4>
                                         </a>
-                                        <span>Dec 3, 2022</span>
+                                        <span>Dec 21, 2022</span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="thumb">
                                         <a href="#">
-                                            <img src="img/news/news_grassroors_img.jpg" alt="">
+                                            <!-- <img src="img/news/news_grassroors_img.jpg" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="info">
@@ -526,7 +526,7 @@
                                             <h4>School for African 
                                                 Women</h4>
                                         </a>
-                                        <span>Dec 3, 2022</span>
+                                        <span>Dec 21, 2022</span>
                                     </div>
                                 </li>
                             </ul>
