--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="single_reson">
                         <div class="thum">
                             <div class="thum_1">
-                                <!-- <img src="img/help/help_2.jpg" alt=""> -->
+                                <img src="img/about/img_Staff.jpg" alt="">
                             </div>
                         </div>
                         <div class="help_content">
@@ -182,7 +182,7 @@
                     <div class="single_reson">
                         <div class="thum">
                             <div class="thum_1">
-                                <!-- <img src="img/help/help_3.jpg" alt=""> -->
+                                <img src="img/about/img_Staff.jpg" alt="">
                             </div>
                         </div>
                         <div class="help_content">
@@ -417,7 +417,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="donate_now_btn text-center">
-                        <a href="https://ko-fi.com/rinyoch" class="boxed-btn4">Donate Now</a>
+                        <a href="https://ko-fi.com/rinyoch" class="boxed-btn4">Donate</a>
                     </div>
                 </div>
 
