--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <div class="col-xl-6 col-md-12 col-lg-8">
                             <div class="short_contact_list">
                                 <ul>
-                                    <li><a href="#"> <i class="fa fa-phone"></i> +1 (989) 501-0583</a></li>
-                                    <li><a href="#"> <i class="fa fa-envelope"></i>rieekhial@gmail.com</a></li>
+                                    <li><a href="#"> <i class="fa fa-phone"></i> +1 (989) 493-1583</a></li>
+                                    <li><a href="#"> <i class="fa fa-envelope"></i>rnnyoach@outlook.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -127,8 +127,8 @@
                         <div class="slider_text ">
                             <span>Get Started Today.</span>
                             <h3>Help fight illiteracy together</h3>
-                            <p>Let us work together for a better future <br>
-                                and help those who lack means.</p>
+                            <p>Let's work together to <br>
+                                help those who have less education means.</p>
                             <a href="About.html" class="boxed-btn3">Learn More
                             </a>
                         </div>
