--- a/cause_details_nonfood_items.html
+++ b/cause_details_nonfood_items.html
@@ -141,7 +141,7 @@
                 <div class="col-lg-12 col-md-12">
                     <div class="single_cause">
                         <div class="thumb">
-                            <img src="img/causes/cause_non_food_items.jpg" alt="">
+                            <!-- <img src="img/causes/cause_non_food_items.jpg" alt=""> -->
                         </div>
                         <div class="causes_content">
                             <div class="custom_progress_bar">
