update all chnages

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <ul id="navigation">
                                         <li><a href="index.html">home</a></li>
                                         <li><a href="About.html">About</a></li>
-                                        <li><a href="Cause.html">Causes</a></li>
+                                        <li><a href="Cause.html">Learn About What We Do</a></li>
 <!-- 
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
@@ -158,8 +158,9 @@
                             </div>
                         </div>
                         <div class="help_content">
-                            <!-- <h4>Collecting Fund</h4>
-                            <p>Donate to the people of South Sudan so we can provide meals to families in need.</p> -->
+                            <h4>Our Mission</h4>
+                            <!-- <p>Donate to the people of South Sudan so we can provide meals to families in need.</p> -->
+                            <p>Prepare and Give hope to everyone that they can do anything they wish to do in life.</p>
                             <a href="Cause.html" class="read_more">Read More</a>
                         </div>
                     </div>
@@ -172,8 +173,9 @@
                             </div>
                         </div>
                         <div class="help_content">
-                            <h4>Donate</h4>
-                            <p>Your contribution will make a massive difference in these people's life.</p>
+                            <!-- <h4>Donate</h4> -->
+                            <h> Our Vision</h>
+                            <p>We aspire for a world where we prioritize investment in saving lives and empowering and educating individuals, particularly women and children.</p>
                             <a href="Cause.html" class="read_more">Read More</a>
                         </div>
                     </div>
@@ -510,7 +512,7 @@
                                     <div class="info">
                                         <a href="#">
                                             <h4>School for African 
-                                                Childrens</h4>
+                                                Children</h4>
                                         </a>
                                         <span>Dec 21, 2022</span>
                                     </div>
