--- a/About.html
+++ b/About.html
@@ -79,9 +79,9 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="About.html">About</a></li>
-                                        <li><a href="Cause.html">Cause</a></li>
+                                        <li><a href="Cause.html">Learn What We Do</a></li>
 <!-- 
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
@@ -146,8 +146,11 @@
                         <div class="section_title">
                             <h3> <span>The reasons why you can support Grassroot Initiative Network </span><br></h3>
                         </div>
-                        <p class="para_1">Grassroots Initiative Network (GIN) driving principles are geared towards rehabilitating dreams, strengthening innovations, and building self-reliance of children, Youth, and women in South Sudan. GIN remains very committed to empowering, educating, and improving the well-being of children, Youth, and women. </p class="para_1">
-                        <p class="para_2">We want to empower rural communities with the opportunities, knowledge, and skills they yearn to have. </p>
+                        <p>The Grassroots Initiative Network (GIN) is dedicated to stimulating aspirations, fostering innovative thinking, and promoting self-sufficiency among the children, youth, and women of South Sudan. GIN is steady in its mission to empower, educate, and enhance the overall welfare of these individuals.<br>
+                            Our goal is to provide rural communities with the means, knowledge, and abilities they readily desire. We are dedicated to empowering them with opportunities that will enable their growth and development.
+                            </p>
+                        <!-- <p class="para_1">Grassroots Initiative Network (GIN) driving principles are geared towards rehabilitating dreams, strengthening innovations, and building self-reliance of children, Youth, and women in South Sudan. GIN remains very committed to empowering, educating, and improving the well-being of children, Youth, and women. </p class="para_1">
+                        <p class="para_2">We want to empower rural communities with the opportunities, knowledge, and skills they yearn to have. </p> -->
                         <a href="https://ko-fi.com/rinyoch"class="boxed-btn4">Donate Now</a>
                     </div>
                 </div>
@@ -173,7 +176,7 @@
                             </a>
                         </div>
                          
-                        <p class="address_text">Prepare and give hope to vulnerable people <br> help us face by global challenge
+                        <p class="address_text">Prepare and give hope to vulnerable people <br> help us to reduce illiteracy in South Sudan
                         </p>
                         <div class="socail_links">
                             <ul>
