--- a/cause_details.html
+++ b/cause_details.html
@@ -82,9 +82,9 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a href="About.html">About</a></li>
-                                        <li><a href="Cause.html">Cause</a></li>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="About.html">About Us</a></li>
+                                        <li><a href="Cause.html">Learn What We Do</a></li>
 <!-- 
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
@@ -125,7 +125,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>Help us to Send Food</h3>
+                        <h3>Help us to Send Materials</h3>
                     </div>
                 </div>
             </div>
@@ -315,7 +315,7 @@
                                 <div class="info">
                                     <a href="#">
                                         <h4>School for African 
-                                            Childrens</h4>
+                                            Children</h4>
                                     </a>
                                     <span>Dec 3, 2022</span>
                                 </div>
