--- a/cause_details_clothes_for_everyone.html
+++ b/cause_details_clothes_for_everyone.html
@@ -83,9 +83,9 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a href="About.html">About</a></li>
-                                        <li><a href="Cause.html">Cause</a></li>
+                                        <li><a href="index.html">Hme</a></li>
+                                        <li><a href="About.html">About Us</a></li>
+                                        <li><a href="Cause.html">Learn About What We Do</a></li>
 <!-- 
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
@@ -317,7 +317,7 @@
                                     <div class="info">
                                         <a href="#">
                                             <h4>School for African 
-                                                Childrens</h4>
+                                                Children</h4>
                                         </a>
                                         <span>Dec 21, 2022</span>
                                     </div>
