upate donation grammar mistake

--- a/cause_details.html
+++ b/cause_details.html
@@ -104,7 +104,7 @@
                                 </nav>
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://ko-fi.com/rinyoch">Make a Donate</a>
+                                        <a href="https://ko-fi.com/rinyoch">Make a donation</a>
                                     </div>
                                 </div>
                             </div>
