fix tint, show face

--- a/Cause.html
+++ b/Cause.html
@@ -157,7 +157,7 @@
                                 <span>Raised: $00.00 </span>
                                 <span>Goal: $150.00 </span>
                             </div>
-                            <a href="cause_details.html"><h4>We teach Literacy</h4></a>
+                            <a href="cause_details.html"><h4>We Teach English Literacy and Educate</h4></a>
                             <p>Your small donation will help and make a difference in these volunteer teachers' situation.</p>
                             <a class="read_more" href="cause_details.html">Read More</a>
                         </div>
