--- a/About.html
+++ b/About.html
@@ -144,7 +144,7 @@
                 <div class="col-lg-7">
                     <div class="activites_info">
                         <div class="section_title">
-                            <h3> <span>The reasons why you can support Grassroot Initiative Network </span><br></h3>
+                            <h3> <span> Why Support Grassroot Initiative Network </span><br></h3>
                         </div>
                         <p>The Grassroots Initiative Network (GIN) is dedicated to stimulating aspirations, fostering innovative thinking, and promoting self-sufficiency among the children, youth, and women of South Sudan. GIN is steady in its mission to empower, educate, and enhance the overall welfare of these individuals.<br>
                             Our goal is to provide rural communities with the means, knowledge, and abilities they readily desire. We are dedicated to empowering them with opportunities that will enable their growth and development.
