--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
                             <div class="short_contact_list">
                                 <ul>
                                     <li><a href="#"> <i class="fa fa-phone"></i> +1 (989) 501-0583</a></li>
-                                    <li><a href="#"> <i class="fa fa-envelope"></i>rieekhial@gmail.com</a></li>
+                                    <li><a href="#"> <i class="fa fa-envelope"></i>rnyoach495@gmail.com</a></li>
                                 </ul>
                             </div>
                         </div>
